<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="6">


        <TextView
            android:id="@+id/riktig"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:drawableRight="@android:drawable/ic_input_add"
            android:fontFamily="@font/bowlby_one"
            android:gravity="center"
            android:text="@string/antall_riktig"
            android:textColor="@color/ColorBlack" />


        <TextView
            android:id="@+id/antallRiktig"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/ColorGreen"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/feil"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:drawableRight="@android:drawable/ic_delete"
            android:fontFamily="@font/bowlby_one"
            android:gravity="center"
            android:text="@string/antall_feil"
            android:textColor="@color/ColorBlack" />

        <TextView
            android:id="@+id/antallFeil"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/ColorRed"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rundeFerdigLayout"
        android:background="@drawable/panda_border"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_weight="5"
        >

        <TextView
            android:id="@+id/rundeFerdig"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/spilligjenBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/main_btn_blue"
            android:gravity="center"
            android:text="@string/spill_igjen"
            android:visibility="visible"></Button>

        <Button
            android:id="@+id/hjemBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/main_btn_grey"
            android:text="@string/avslutt"
            android:visibility="visible"></Button>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:weightSum="5"
        android:background="@drawable/panda_border">


        <ImageView
            android:id="@+id/riktigAnimasjon"
            app:srcCompat="@drawable/riktig"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/feilAnimasjon"
            app:srcCompat="@drawable/feil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />


        <TextView
            android:id="@+id/spmTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textColor="@color/ColorGold"
            android:textSize="45sp"
            android:gravity="center|right"
            android:paddingBottom="80dp" />


        <TextView
            android:id="@+id/svarTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center|left"
            android:hint="@string/skriv_svaret_her"
            android:inputType="none"
            android:paddingBottom="80dp"
            android:textColor="@color/ColorGold"
            android:textSize="45sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="3">

            <Button
                android:id="@+id/number_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number"
                android:text="1"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/number_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number"
                android:text="2"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/number_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number"
                android:text="3"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="3">

            <Button
                android:id="@+id/number_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number"
                android:text="4"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/number_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number"
                android:text="5"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/number_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number"
                android:text="6"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="3">

            <Button
                android:id="@+id/number_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number"
                android:text="7"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/number_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number"
                android:text="8"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/number_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number"
                android:text="9"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="3">

            <Button
                android:id="@+id/backspace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number"
                android:text="@string/tom"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/number_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number"
                android:text="0"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/svarBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/number"
                android:text="@string/neste"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>